[package]
name = "clibbix"
version = "0.1.0"
authors = ["maxvinza <maxvinza@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snmp = "0.2.2"
chrono = "0.4"
tsdb = { path = "../libtsdb" }
error-rules = "0.2"
